# AI-assistant-for-Jira-comment-replies

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.data/: assistant.db
docs/: ARCHITECTURE.md  SETUP.md
scripts/: test_connectivity.py
src/: __init__.py  config.py
src/agent/: __init__.py  classifier.py  context_collector.py  defect_validator.py  drafter.py  duplicate_detector.py  pipeline_correlator.py  rag_pipeline.py  severity_challenger.py
src/api/: __init__.py  app.py  deps.py  event_filter.py  orchestrator.py  security.py
src/api/routes/: __init__.py  admin.py  dashboard.py  drafts.py  health.py  rag.py  ui.py  webhook.py
src/api/static/: app.js  dashboard.js  style.css
src/api/templates/: UI.html  base.html  dashboard.html  dashboard_login.html  draft_review.html  drafts.html
src/integrations/: confluence.py  git.py  jenkins.py  jira.py  log_lookup.py  notifications.py  s3_connector.py  testrail.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  classification.py  comment.py  context.py  draft.py  rag.py  webhook.py
src/queue/: __init__.py  broker.py
src/rag/: __init__.py  engine.py  ingest.py
src/storage/: __init__.py  sqlite_store.py
src/utils/: __init__.py  redactor.py
tests/: conftest.py
tests/integration/: test_confluence_live.py  test_full_pipeline.py  test_jira_live.py
tests/unit/: test_action_executor.py  test_classifier.py  test_config.py  test_confluence.py  test_confluence_citations.py  test_context_collector.py  test_coverage_health.py  test_drafter.py  test_duplicate_detector.py  test_elk_lookup.py  test_git_client.py  test_ingester.py  test_jenkins_client.py  test_jira_client.py  test_log_lookup.py  test_models.py  test_multi_repo_and_dashboard.py  test_mvp2_models.py  test_notifications.py  test_pipeline.py  test_pipeline_correlator.py  test_rag_engine.py  test_rag_integration.py  test_severity_challenger.py  test_sqlite_store.py  test_testrail.py  test_testrail_marker.py  test_ui.py  test_webhook_filter.py  test_webhook_pipeline.py
