[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-comment-assistant"
version = "0.1.0"
description = "AI assistant for responding to developer comments on Jira defects with context-aware drafts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Nagasai", email = "nagasai.chintalapati@hpe.com"},
    {name = "Yousef", email = "yousef.konswah@hpe.com"},
    {name = "Vinnarasu", email = "vinnarasu.ganesan@hpe.com"}
]

dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "atlassian-python-api>=3.41.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # Local LLM
    "llama-cpp-python>=0.2.0",
    # RAG
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.0.0",
    # Review UI
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
# Development and testing tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
# Redis-backed distributed rate limiting (production HA deployments)
redis = [
    "redis>=5.0.0",
]
# RabbitMQ message queue / DMZ relay (production queue-based deployments)
queue = [
    "pika>=1.3.0",
]
# S3 / MinIO artifact storage
s3 = [
    "boto3>=1.34.0",
]
# Prometheus metrics scraping
observability = [
    "prometheus-client>=0.20.0",
]
# All production optional extras combined
prod = [
    "redis>=5.0.0",
    "pika>=1.3.0",
    "boto3>=1.34.0",
    "prometheus-client>=0.20.0",
]
# Everything (dev + prod extras)
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "boto3>=1.34.0",
    "prometheus-client>=0.20.0",
]

[project.scripts]
# Run the service: jira-assistant
jira-assistant = "src.api.app:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["src"]
